--- a/JavaEEPlatform-noCheck/2. SpringMvc/RestFulDemo/src/main/resources/application.yaml
+++ b/JavaEEPlatform-noCheck/2. SpringMvc/RestFulDemo/src/main/resources/application.yaml
@@ -10,3 +10,7 @@ spring:
         url: http://localhost:8081
 server:
   port: 8080
+  tomcat:
+    uri-encoding: UTF-8
+    max-threads: 1000
+    max-connections: 20000
