--- a/JavaEEPlatform-noCheck/2. SpringMvc/RestFulDemo/src/main/resources/application.yaml
+++ b/JavaEEPlatform-noCheck/2. SpringMvc/RestFulDemo/src/main/resources/application.yaml
@@ -12,5 +12,6 @@ server:
   port: 8080
   tomcat:
     uri-encoding: UTF-8
-    max-threads: 1000
-    max-connections: 20000
+    max-threads: 2000
+    max-connections: 5000
+    accept-count: 5000
