--- a/JavaEEPlatform-withException/2. SpringMvc/RestFulDemo/src/main/resources/application.yaml
+++ b/JavaEEPlatform-withException/2. SpringMvc/RestFulDemo/src/main/resources/application.yaml
@@ -12,6 +12,7 @@ server:
   port: 8080
   tomcat:
     uri-encoding: UTF-8
-    max-threads: 3000
     max-connections: 20000
     accept-count: 10000
+    threads:
+      max: 3000
