--- a/JavaEEPlatform-noCheck/2. SpringMvc/RestFulDemo/src/main/resources/application.yaml
+++ b/JavaEEPlatform-noCheck/2. SpringMvc/RestFulDemo/src/main/resources/application.yaml
@@ -10,8 +10,9 @@ spring:
         url: http://localhost:8081
 server:
   port: 8080
-#   tomcat:
-#     uri-encoding: UTF-8
-#     max-threads: 2000
-#     max-connections: 5000
-#     accept-count: 5000
+  tomcat:
+    uri-encoding: UTF-8
+    max-connections: 20000
+    accept-count: 8000
+    threads:
+      max: 4000
